--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -222,10 +222,11 @@
   "wallet": {
     "page-title": "ذخیره حساب ها",
     "heading": "ذخیره حساب ها",
-    "details": "با استفاده از فناوری OAuth2، حساب‌های خود را به‌طور ایمن در پلتفرم‌هایی که پشتیبانی می‌کنیم پیوند دهید تا بتوانید در زمان آفلاین به برقراری ارتباط با آنها ادامه دهید.",
+    "details":" هنگامی که حساب‌های خود را ذخیره کردید، می‌توانید از برنامه برای برقراری ارتباط از طریق آنها استفاده کنید، گویی که به صورت آنلاین متصل هستید.",
     "instructions1": "برای شروع، پلتفرمی را که می‌خواهید به صورت آفلاین با آن ارتباط برقرار کنید انتخاب کنید و روی دکمه ذخیره کلیک کنید.",
-    "instructions2": "اکنون شما با موفقیت توکن های خود را ذخیره کرده اید، روی دکمه همگام سازی زیر کلیک کنید تا با برنامه همگام سازی شود.",
-    "note":"توجه: هر زمان که یک رمز جدید ذخیره می کنید یا یک توکن را لغو می کنید، باید با برنامه خود همگام سازی کنید.",
+    "instructions2": "حساب های ذخیره شده شما را می توان در هر زمان باطل کرد. برای شروع ارتباط با آنها، این حساب را با برنامه همگام سازی کنید.",
+    "instructions3": "فهرست پلتفرم های پشتیبانی شده ما به شما امکان می دهد برای چندین پلتفرم ذخیره کنید. برای برقراری ارتباط آفلاین همگام سازی با برنامه لازم است.",
+    "instructions4": "ما در حال کار بر روی پلتفرم های بیشتری هستیم، لطفاً به طور مرتب لیست به روز شده پلتفرم های پشتیبانی شده را بررسی کنید یا وبلاگ ما را نیز بررسی کنید.",
     "labels": {
       "description": "شرح",
       "how-to-save": "نحوه ذخیره دسترسی"
