--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -222,11 +222,11 @@
   "wallet": {
     "page-title": "ذخیره حساب ها",
     "heading": "ذخیره حساب ها",
-    "details":" هنگامی که حساب‌های خود را ذخیره کردید، می‌توانید از برنامه برای برقراری ارتباط از طریق آنها استفاده کنید، گویی که به صورت آنلاین متصل هستید.",
+    "details": " هنگامی که حساب‌های خود را ذخیره کردید، می‌توانید از برنامه برای برقراری ارتباط از طریق آنها استفاده کنید، گویی که به صورت آنلاین متصل هستید.",
     "instructions1": "برای شروع، پلتفرمی را که می‌خواهید به صورت آفلاین با آن ارتباط برقرار کنید انتخاب کنید و روی دکمه ذخیره کلیک کنید.",
     "instructions2": "حساب های ذخیره شده شما را می توان در هر زمان باطل کرد. برای شروع ارتباط با آنها، این حساب را با برنامه همگام سازی کنید.",
     "instructions3": "فهرست پلتفرم های پشتیبانی شده ما به شما امکان می دهد برای چندین پلتفرم ذخیره کنید. برای برقراری ارتباط آفلاین همگام سازی با برنامه لازم است.",
-    "instructions4": "ما در حال کار بر روی پلتفرم های بیشتری هستیم، لطفاً به طور مرتب لیست به روز شده پلتفرم های پشتیبانی شده را بررسی کنید یا وبلاگ ما را نیز بررسی کنید.",
+    "instructions4": "«ما در حال کار بر روی پلتفرم‌های بیشتری هستیم، لطفاً مرتباً فهرست به‌روزرسانی‌شده پلتفرم‌های پشتیبانی‌شده را بررسی کنید یا <a href='https://afkanerd.github.io/' target='_blank' rel='noreferrer' ما را نیز بررسی کنید. >وبلاگ</a>",
     "labels": {
       "description": "شرح",
       "how-to-save": "نحوه ذخیره دسترسی"
@@ -237,7 +237,7 @@
     },
     "section-1": {
       "heading": "پلتفرم های موجود",
-      "cta-button-text":"صرفه جویی"
+      "cta-button-text": "صرفه جویی"
     },
     "section-2": {
       "heading": "پلتفرم های ذخیره شده",
@@ -278,14 +278,13 @@
       "page-title": "تایید کد تلگرام",
       "alerts": {
         "two-steps-verification-enabled": "تایید دو مرحله ای در اکانت تلگرام شما فعال است و رمز عبور لازم است، لطفا رمز تایید دو مرحله ای تلگرام خود را وارد کنید"
-
       }
     },
     "two-steps-verification": {
       "page-title": "تایید دو مرحله ای تلگرام",
       "heading": "تایید دو مرحله ای تلگرام",
       "paragraph-1": "تایید دو مرحله ای در اکانت تلگرام شما فعال است. لطفا رمز تایید دو مرحله ای تلگرام خود را در قسمت زیر وارد کنید.",
-      "paragraph-2":"لطفاً توجه داشته باشید که برای حفظ حریم خصوصی و امنیت شما، رمز عبور شما توسط SMSWithoutBorders خوانده یا ذخیره نخواهد شد. علاوه بر این، ما به شدت توصیه می کنیم که رمز عبور خود را به طور منظم تغییر دهید تا امنیت حساب خود را بیشتر کنید.",
+      "paragraph-2": "لطفاً توجه داشته باشید که برای حفظ حریم خصوصی و امنیت شما، رمز عبور شما توسط SMSWithoutBorders خوانده یا ذخیره نخواهد شد. علاوه بر این، ما به شدت توصیه می کنیم که رمز عبور خود را به طور منظم تغییر دهید تا امنیت حساب خود را بیشتر کنید.",
       "form": {
         "password": {
           "label": "رمز تایید دو مرحله ای تلگرام",
@@ -361,11 +360,11 @@
     "description2": "حساب های خود را با استفاده از فناوری OAuth2 به روشی ایمن در پلتفرم های پشتیبانی شده وصل کنید. این به شما امکان می دهد حتی زمانی که آنلاین نیستید با دیگران در آن پلتفرم ها در ارتباط باشید. در صفحه ذخیره حساب ها، پلتفرم مورد نظر خود را انتخاب کنید و روی ذخیره کلیک کنید.",
     "description3": "این برنامه تنها پلتفرمی است که از طریق آن می توانید به ویژگی ها و عملکردهای SWOB دسترسی داشته باشید، این برنامه برای ارائه یک تجربه کاربری یکپارچه طراحی شده است.",
     "description4": "در نهایت با کلیک بر روی دکمه همگام سازی با برنامه تلفن همراه خود همگام سازی کنید و شروع به برقراری ارتباط کنید",
-    "continue":"ادامه هید",
-    "back":"بازگشت",
-    "reset":"تنظیم مجدد",
-    "finish":"تمام",
-    "completed":"تبریک! شما با موفقیت حساب SWOB خود را راه اندازی کردید 🎉",
+    "continue": "ادامه هید",
+    "back": "بازگشت",
+    "reset": "تنظیم مجدد",
+    "finish": "تمام",
+    "completed": "تبریک! شما با موفقیت حساب SWOB خود را راه اندازی کردید 🎉",
     "alerts": {
       "load-error": "متأسفیم نتوانستیم معیارهای شما را پیدا کنیم. اگر خطا ادامه داشت، لطفا با پشتیبانی تماس بگیرید",
       "idle": {
@@ -495,7 +494,7 @@
         "required": "رمز عبور مورد نیاز است",
         "required-new": "لطفا رمز عبور جدید را وارد کنید",
         "lowercase-letters": "رمز عبور باید حداقل یک حرف کوچک داشته باشد",
-        "uppercase-letters":  "رمز عبور باید حداقل دارای یک حرف بزرگ باشد",
+        "uppercase-letters": "رمز عبور باید حداقل دارای یک حرف بزرگ باشد",
         "numbers": "رمز عبور باید حداقل شامل یک عدد باشد",
         "special-characters": "رمز عبور باید حداقل یکی از نویسه های ویژه زیر را داشته باشد: !@#$%^&*()_+-=",
         "no-compromised-password": "گذرواژه قبلاً به دلیل نقض داده در معرض خطر قرار گرفته است. از رمز عبور دیگری استفاده کنید"
