added partners translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -109,11 +109,9 @@
   },
 
   "partners": {
-    "heading": "Partners",
-    "partner1": "Afkanerd Technologies",
-    "partner2": "Afkanerd Technologies",
-    "partner3": "Afkanerd Technologies"
+    "heading": "Partners"
   },
+
   "contact": {
     "heading": "Contact Us",
     "details": "Using SWOB is as easy as authenticating your credentials",
