--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -107,6 +107,11 @@
       }
     }
   },
+
+  "partners": {
+    "heading": "شرکای"
+  },
+
   "contact": {
     "heading": "با ما تماس بگیرید",
     "details": "استفاده از SWOB به آسانی احراز هویت اعتبار شماست",
