--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -306,7 +306,7 @@
     "paragraph-2": "We also require you to provide the code sent to you by SMS as a means of guaranteeing you have the necessary (own) rights to the required phone number. This will help us prevent actors from using non consented phone numbers to create accounts - preventing the owners from further doing so",
     "form": {
       "code": {
-        "placeholder": "SMS Verification Code"
+        "placeholder": "Verification Code"
       }
     },
     "resend-label": "Resend in",
