--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -306,7 +306,7 @@
     "paragraph-2": "ما همچنین از شما می‌خواهیم که کدی را که از طریق پیامک برای شما ارسال می‌شود، به‌عنوان وسیله‌ای برای تضمین داشتن حقوق لازم (خود) در مورد شماره تلفن مورد نیاز، ارائه دهید. این به ما کمک می‌کند تا از استفاده بازیگران از شماره تلفن‌های بدون رضایت برای ایجاد حساب‌ها جلوگیری کنیم - از مالکان از انجام این کار بیشتر جلوگیری کنیم.",
     "form": {
       "code": {
-        "placeholder": "کد تایید پیامکی"
+        "placeholder": "کد تایید"
       }
     },
     "resend-label": "دوباره ارسال کنید",
