--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -306,7 +306,7 @@
     "paragraph-2": "Nous vous demandons également de fournir le code qui vous a été envoyé par SMS afin de garantir que vous disposez des droits (propres) nécessaires sur le numéro de téléphone requis. Cela nous aidera à empêcher les acteurs d'utiliser des numéros de téléphone non consentis pour créer des comptes - empêchant ainsi les propriétaires de continuer à le faire",
     "form": {
       "code": {
-        "placeholder": "Code de vérification SMS"
+        "placeholder": "Le code de vérification"
       }
     },
     "resend-label": "Renvoyer dans",
