--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -302,7 +302,7 @@
   "code-verification": {
     "page-title": "Verify your account",
     "heading": "Verification",
-    "paragraph-1": "A verification code has been sent to your Telegram app. Please enter it below. This process confirms the number provided is active and can be used for communication when the time comes.",
+    "paragraph-1": "A verification code has been sent to your phone (through sms). Please enter it below. This process confirms the number provided is active and can be used for communication when the time comes.",
     "paragraph-2": "We also require you to provide the code sent to you by SMS as a means of guaranteeing you have the necessary (own) rights to the required phone number. This will help us prevent actors from using non consented phone numbers to create accounts - preventing the owners from further doing so",
     "form": {
       "code": {
