--- a/public/locales/fa/translation.json
+++ b/public/locales/fa/translation.json
@@ -302,7 +302,7 @@
   "code-verification": {
     "page-title": "حساب کاربری خودراتایید کنید",
     "heading": "تایید",
-    "paragraph-1": "یک کد تایید به تلگرام شما ارسال شده است. لطفاً آن را در زیر وارد کنید. این فرآیند فعال بودن شماره ارائه شده را تایید می کند و در زمان مناسب می تواند برای ارتباط استفاده شود.",
+    "paragraph-1": "یک کد تأیید به تلفن شما (از طریق پیامک) ارسال شده است. لطفا آن را در زیر وارد کنید. این فرآیند تأیید می کند که شماره ارائه شده فعال است و می تواند در زمان مناسب برای ارتباط استفاده شود.",
     "paragraph-2": "ما همچنین از شما می‌خواهیم که کدی را که از طریق پیامک برای شما ارسال می‌شود، به‌عنوان وسیله‌ای برای تضمین داشتن حقوق لازم (خود) در مورد شماره تلفن مورد نیاز، ارائه دهید. این به ما کمک می‌کند تا از استفاده بازیگران از شماره تلفن‌های بدون رضایت برای ایجاد حساب‌ها جلوگیری کنیم - از مالکان از انجام این کار بیشتر جلوگیری کنیم.",
     "form": {
       "code": {
